[project]
name = "bertpca"
version = "0.1.0"
description = "Transformer-based Survival Analysis for Prostate Cancer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Alexandre Calado", email = "alexandreluiscalado@gmail.com" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "PyYAML>=6.0",
    "pandas>=2.0.0",
    "tensorflow>=2.13.0",
    "scikit-learn>=1.3.0",
    "lifelines>=0.27.0",
    "datasets>=2.14.0",
    "optuna>=3.0.0",
]

[project.scripts]
bertpca-train = "scripts.train_bertpca:main"
bertpca-tune = "scripts.tune_bertpca:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["bertpca*", "scripts*"]

[tool.setuptools.package-dir]
"" = "src"
"scripts" = "scripts"
